--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
             <section>
                 <h2>About Me</h2>
             </section>
-            <section>
-                <pre>
-                    This info about me.
-                </pre>
+            <section class="row">
+                <p>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
+                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                    sunt in culpa qui officia deserunt mollit anim id est laborum.".
+                </p>
             </section>
         </section>
         <section class="row" id="Work">    
