--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section>
                 <h2>About Me</h2>
             </section>
-            <section class="row">
+            <section class="column">
                 <p>
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
