fixed folder hierarchy and cleared readme added media scree

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <section>
                 <h2>Projects</h2>
             </section>
+            <div>
+                <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
+            </div>
         </section>
         <section class="row" id="Resume">    
             <section>
