formatting for header and about me

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section>
                 <h2>About Me</h2>
             </section>
-            <section class="column">
+            <section>
                 <p>
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
@@ -50,10 +50,31 @@
             <section>
                 <h2>Projects</h2>
             </section>
-            <div>
-                <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
-            </div>
-        </section>
+                <div>
+                    <ul>
+                        <li>
+                            <h3>Project 1</h3>
+                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
+                            <p>text about project 1</p>
+                        </li>
+                        <li>
+                            <h3>Project 2</h3>
+                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
+                            <p>text about project 2</p>
+                        </li>
+                        <li>
+                            <h3>Project 3</h3>
+                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
+                            <p>text about project 3</p>
+                        </li>
+                        <li>
+                            <h3>Project 4</h3>
+                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
+                            <p>text about project 4</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         <section class="row" id="Resume">    
             <section>
                 <h2>Resume</h2>
