uhhhgggg sooo messsy

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     
     <main>
-        <section class="row" id="About-Me">
+        <section class="About-Me">
             <section>
                 <h2>About Me</h2>
             </section>
@@ -46,38 +46,58 @@
                 </p>
             </section>
         </section>
-        <section class="row" id="Work">    
+        <section id="Work">    
             <section>
                 <h2>Projects</h2>
             </section>
                 <div>
                     <ul>
                         <li>
-                            <h3>Project 1</h3>
-                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
-                            <p>text about project 1</p>
-                        </li>
-                        <li>
-                            <h3>Project 2</h3>
+                            <span class ="card">
+                            <header>Project 2</header>
                             <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
                             <p>text about project 2</p>
+                            </span>
                         </li>
                         <li>
-                            <h3>Project 3</h3>
+                            <span class ="card">
+                            <header>Project 1</header>
                             <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
-                            <p>text about project 3</p>
+                            <p>text about project 1</p>
+                            </span>
                         </li>
                         <li>
-                            <h3>Project 4</h3>
+                            <span class ="card">
+                            <header>Project 4</header>
                             <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
                             <p>text about project 4</p>
+                        </span>
+                        </li>
+
+                        <li>
+                            <span class ="card">
+                            <header>Project 3</header>
+                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
+                            <p>text about project 3</p>
+                            </span>
+                        </li>
+                        <li>
+                            <span class ="card">
+                            <h3>Project 5</h3>
+                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
+                            <p>text about project 5</p>
+                            </span>      
                         </li>
                     </ul>
                 </div>
             </section>
-        <section class="row" id="Resume">    
+            <br>
+        <section id="Resume">    
             <section>
                 <h2>Resume</h2>
+            </section>
+            <section>
+                <a href="https:www.google.com">Google Doc: Resume</a>
             </section>
         </section>
     </main>
