--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#About-Me">Ab<span class="C">o</span>ut Me</a>
+                    <a href="#About-Me">About Me</a>
                 </li>
                 <li>
                     <a href="#Work">Work</a>
@@ -33,16 +33,15 @@
         <section class="About-Me">
             <section>
                 <h2>About Me</h2>
+                <div>
+                    <img src="./assets/images/avatar (2).jpg" alt="Avatar"/>
+                </div>
             </section>
             <section>
                 <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                    enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                    sunt in culpa qui officia deserunt mollit anim id est laborum.".
+                    He's a super cool dude, that likes to risk it all, and play it close 
+                    to the chest.  A time traveler to some and a prophet to others, he is 
+                    a traveler through space.
                 </p>
             </section>
         </section>
@@ -54,31 +53,31 @@
                     <ul>
                         <li>
                             <span class ="card">
-                            <header>Project 2</header>
-                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
-                            <p>text about project 2</p>
-                            </span>
-                        </li>
-                        <li>
-                            <span class ="card">
                             <header>Project 1</header>
-                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
+                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" /></span>
                             <p>text about project 1</p>
                             </span>
                         </li>
                         <li>
                             <span class ="card">
-                            <header>Project 4</header>
+                            <header>Project 3</header>
                             <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
-                            <p>text about project 4</p>
+                            <p>text about project 3</p>
+                            </span>
+                        </li>
+                        <li>
+                            <span class ="card">
+                            <header>Project 2</header>
+                            <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
+                            <p>text about project 2</p>
                         </span>
                         </li>
 
                         <li>
                             <span class ="card">
-                            <header>Project 3</header>
+                            <header>Project 4</header>
                             <img src="assets/images/synthwave-3941721_640.jpg" alt="project-1" />
-                            <p>text about project 3</p>
+                            <p>text about project 4</p>
                             </span>
                         </li>
                         <li>
@@ -107,3 +106,4 @@
     <a href="https://www.google.com">WEBSITE</a>
     <a href="mailto:mcoxconn@gmail.com?subject=From%20Portfolio%20Site?">EMAIL</a>
 </footer>
+</html>
