updating the pro resume repo

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     <header>
     <h1 class="title" name="name">MICAH C CONN</h1>
-        <nav class="link-bar">          
-                    <a href="#About-Me">About Me</a>  
-                    <a href="#Work">Work</a>
-                    <a href="#Resume">Resume</a>
-                    <a href="#Contact-Me">Contact Me</a>
-        </nav>
+        <div>
+            <nav class="link-bar">          
+                        <a href="#About-Me">About Me</a>  
+                        <a href="#Work">Work</a>
+                        <a href="#Resume">Resume</a>
+                        <a href="#Contact-Me">Contact Me</a>
+            </nav>
+        </div>  
     </header>
     <main>
         <section class="About-Me">
@@ -68,7 +70,7 @@
                             </section>     
                     </section>         
                 </section>
-            /section>
+            </section>
             <br>
         <section id="Resume">    
             <section class="left">
