hmmmmm it is nicer

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <h1 class="title" name="name">MICAH C CONN</h1>
         <div>
             <nav class="link-bar">          
-                        <a href="#About-Me">About Me</a>  
+                        <a href="#About-Me">About</a>  
                         <a href="#Work">Work</a>
                         <a href="#Resume">Resume</a>
-                        <a href="#Contact-Me">Contact Me</a>
+                        <a href="#Contact-Me">Contact</a>
             </nav>
         </div>  
     </header>
     <main>
         <section class="About-Me">
             <section class="statement">
-                <h2>About Me</h2>
+                <h2>About</h2>
                 <img class="abtPic" src="./assets/images/avatar (2).jpg" alt="Avatar"/>
                 <p id="description">
                     He's a super cool dude, that likes to risk it all, and play it close 
@@ -77,7 +77,7 @@
                 <h2>Resume</h2>
             </section>
             <section class="right">
-                <a href="https:www.google.com">Google Doc: Resume</a>
+                <a href="https://drive.google.com/file/d/1L1aDQvehMLNeMmheiKAulxUJEk9oPo2a/view?usp=sharing">Google Doc: Resume</a>
             </section>
         </section>
     </main>
