added a few small links

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 </body>
 <footer id="Contact-Me">
     <a href="tel:=16823860275">PHONE</a>
-    <a href="https://pacoavocado.github.io/die-mappe-hw2/">WEBSITE</a>
+    <a href="https://github.com/pacoavocado">GitHub</a>
+    <a href="https://www.linkedin.com/in/micah-conn-2b1152175/">Linkedin</a>
     <a href="mailto:mcoxconn@gmail.com?subject=From%20Portfolio%20Site?">EMAIL</a>
 </footer>
 </html>
